--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Three.js - Template - Simple</title>
-</head>
-<body>
+  </head>
+  <body>
     <canvas class="webgl"></canvas>
-</body>
+    <input type="file" id="file-input" accept="audio/*" />
+    <canvas id="sound-canvas"></canvas>
+    <audio id="audio" controls></audio>
+  </body>
 </html>
