--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <body>
     <canvas class="webgl"></canvas>
     <input type="file" id="file-input" accept="audio/*" />
+    <label for="file-input" class="btn-file-upload">Select music file</label>
     <canvas id="sound-canvas"></canvas>
     <audio id="audio" controls></audio>
   </body>
