--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
     <title>Three.js - Template - Simple</title>
   </head>
   <body>
@@ -10,6 +11,6 @@
     <input type="file" id="file-input" accept="audio/*" />
     <label for="file-input" class="btn-file-upload">Select music file</label>
     <canvas id="sound-canvas"></canvas>
-    <audio id="audio" controls></audio>
+    <audio id="audio" src="/static/Yeu 5 - Rhymastic.mp3" controls></audio>
   </body>
 </html>
