--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <input type="file" id="file-input" accept="audio/*" />
   <label for="file-input" class="btn-file-upload">Select music file</label>
   <canvas id="sound-canvas"></canvas>
-  <audio id="audio" src="/static/Yeu 5 - Rhymastic.mp3" controls></audio>
+  <audio id="audio" src="/static/RADWIMPS_Suzume.flac" controls></audio>
 </body>
 
 </html>
